# tag_board

./: .gitignore  Makefile  Procfile  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 33517d06e1b9_.py  953e0e57ee54_.py
tags_agr/: __init__.py  db.py  db_tools.py  flask_app.py  long.py  main.py  models.py  resize.py  schemas.py
tags_agr/api/: routes.py  service.py
tags_agr/api/local_routes/: api.py
tags_agr/static/: dashboard.css
tags_agr/templates/: base.html  index.html  resize.html
