[tool.poetry]
name = "tags_agr"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
openpyxl = "^3.0.7"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
Flask = "^2.0.1"
Flask-Bootstrap = "^3.3.7"
Flask-HTTPAuth = "^4.4.0"
gunicorn = "^20.1.0"
Flask-WTF = "^0.15.1"
tinify = "^1.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
