[tool.poetry]
name = "tags_agr"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.7"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
gunicorn = "^20.1.0"
pandas = "^1.3.4"
loguru = "^0.5.3"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
